# chemiss-cpp

./: .gitignore  CMakeLists.txt  README.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
src/: main.cpp
src/game/: board.cpp  board.h  element.cpp  element.h  game_state.cpp  game_state.h  piece.cpp  piece.h  rules.cpp  rules.h
src/network/: websocket_server.cpp  websocket_server.h
src/utils/: json_utils.cpp  json_utils.h
